lesson03/styles/medium.css
/* Tablet Views ******************************/
@media only screen and (min-width: 37.5em) {
	h1 {
		font-size: 1.5rem;
	}
	/* Grid *********************/
   	nav ul {
		display: grid;
		/*grid-template-columns: repeat(5, 1fr); */
		grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
	}

	nav a {
		font-size: 1rem;
	}

  main {
		grid-template-columns: 1fr 1fr;
	}
	
  article:nth-child(3) {
		grid-column: span 2;
	}

	main article img {
		width: 100%;
		height: auto;
		margin: auto;
	}
}

